--- a/alertmanager.yml
+++ b/alertmanager.yml
@@ -9,7 +9,7 @@ route:
 receivers:
   - name: 'telegram_bot'
     telegram_configs:
-      - bot_token: '6282278445:AAFFzQZmszNCt5C5hJ7c9B7-h6GTs6KmRBM'
+      - bot_token: 'xxxxxxx'
         api_url: 'https://api.telegram.org'
         chat_id: -1001917034049
         parse_mode: 'HTML'
